fix: Id de seccion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <main>
-            <section id="acerca" class="example_div">
+            <section id="info" class="example_div">
             <h2>Acerca de nosotros</h2>
             <p>Nuestra empresa esta dedicada a ofrecer automoviles de alta <strong><code>calidad</code></strong> y <strong><code>seguridad</code></strong>.</p>
             <div class="underscore_div">
